Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
 
     <section class="main-content">
       <h3>
-<a id="-cil-shopping-" class="anchor" href="#-cil-shopping-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/web/"> CIL Shopping </a>
+<a id="-cil-" class="anchor" href="#-cil-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/web/"> CIL </a>
 </h3>
 
 <p>A website template for online shopping</p>
+
+<h3>
+<a id="-birthday-card" class="anchor" href="#-birthday-card" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/Birthday/"> Birthday Card</a>
+</h3>
+
+<p>A special birthday card template for a special individual.Alternative way to congratulate someone on his or her special day with a webpage dedicated to him or her. </p>
+
+<h3>
+<a id="sample-front-page" class="anchor" href="#sample-front-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample Front Page</h3>
+
+<p>A sample front page that can be used for various purpose.</p>
 
       <footer class="site-footer">
 
