--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
     <section class="main-content">
       <h3>
+<a id="gianna-drake-kerrison" class="anchor" href="#gianna-drake-kerrison" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/Profile/">Gianna Drake-Kerrison</a>
+</h3>
+
+<p>A portfolio page for UBS's financial advisor, Gianna Drake. The site is build as a way to introduce Gianna to her prospects and clients. In the site, it gives a brief background, value and works that she does for her client. At the same time, the site provide ways to contact Gianna.</p>
+
+<h3>
 <a id="-cil-" class="anchor" href="#-cil-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/web/"> CIL </a>
 </h3>
 
