Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <p>A special birthday card template for a special individual.Alternative way to congratulate someone on his or her special day with a webpage dedicated to him or her. </p>
 
 <h3>
-<a id="sample-front-page" class="anchor" href="#sample-front-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample Front Page</h3>
+<a id="sample-front-page" class="anchor" href="#sample-front-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://joeycl1.github.io/Sample/">Sample Front Page</a>
+</h3>
 
 <p>A sample front page that can be used for various purpose.</p>
 
